Add Firebase to skills

--- a/cv.tex
+++ b/cv.tex
@@ -55,7 +55,7 @@
 \cvitemwithcomment{German}{C1}{Deutsches Sprachdiplom der Kultusministerkonferenz, Stufe II}
 
 \section{Computer skills}
-\cvitem{Advanced}{Swift, Objective-C, RxSwift, SwiftUI, Combine}
+\cvitem{Advanced}{Swift, Objective-C, RxSwift, SwiftUI, Combine, Firebase}
 \cvitem{Intermediate}{Java (Backend), Android (Kotlin), Bash, Jenkins, Fastlane}
 \cvitem{Dev environment}{macOS, Xcode, VS Code, Source Tree, git}
 
