Add Adyen in used technologies

--- a/cv.tex
+++ b/cv.tex
@@ -27,8 +27,8 @@
 
 \section{Experience}
 
-\cventry{Jan 2018 -- present}{iOS Engineer}{eBay GmbH}{Berlin}{}{At eBay I work as part of the MoVe project, introducing a platform for selling used vehicles across all eBay markets.
-\newline{\textbf{Technologies:} \texttt{RxSwift, SwiftUI, Jenkins, Java}}
+\cventry{Jan 2019 -- present}{iOS Engineer}{eBay GmbH}{Berlin}{}{At eBay I work as part of the MoVe project, introducing a platform for selling used vehicles across all eBay markets.
+\newline{\textbf{Technologies:} \texttt{RxSwift, SwiftUI, Jenkins, Java, Adyen}}
 \newline}
 
 \cventry{Jan 2016 - Dec 2018}{Application Developer}{iconmobile group}{Berlin}{}{As an Application Developer at iconmobile I have worked on a multitude of different iOS projects:
